@@ -46,6 +46,10 @@ use Exception::Class
         {
             isa => "XML::Grammar::Fiction::Err::Parse::LineError",
         },
+        "XML::Grammar::Fiction::Err::Parse::ProgramListingContainsTags" =>
+        {
+            isa => "XML::Grammar::Fiction::Err::Parse::LineError",
+        }
     )
     ;
 1;
